--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -99,7 +99,7 @@
 	/* шапку прижимаем к правому краю */
 	.header {
 		justify-content: flex-end;
-		padding: 1rem 0.75rem 0;
+		padding: 1rem 1rem 0;
 	}
 
 	/* сама таблетка превращается в "держатель" для кружка */
@@ -126,6 +126,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		margin: 20px;
 
 		width: 66px;
 		height: 66px;
@@ -134,12 +135,11 @@
 		background: linear-gradient(120deg,
 				rgba(255, 255, 255, 0.25),
 				rgba(255, 255, 255, 0.05));
-		backdrop-filter: blur(4px) saturate(120%);
-		-webkit-backdrop-filter: blur(4px) saturate(120%);
+		backdrop-filter: blur(1px) saturate(120%);
+		-webkit-backdrop-filter: blur(1px) saturate(120%);
 
 		border: 1px solid rgba(255, 255, 255, 0.35);
-		box-shadow: 0 16px 40px rgba(0, 0, 0, 0.45);
-
+		box-shadow: 0 10px 24px rgba(0, 0, 0, 0.35);
 		cursor: pointer;
 		position: relative;
 	}
@@ -171,30 +171,24 @@
 	} */
 
 	/* выпадающее меню под кружком */
-	.mobileMenu {
-		display: block;
-
-		position: fixed;
-		top: 4.5rem;
-		right: 0;
-		left: auto;
-
-		max-width: 260px;
-		margin-right: 0.75rem;
-
-		padding: 1.2rem 1.1rem 1.4rem;
-		border-radius: 20px;
-
-		background: rgba(5, 5, 5, 0.96);
-		border: 1px solid rgba(255, 255, 255, 0.3);
-		box-shadow: 0 20px 50px rgba(0, 0, 0, 0.95);
-
-		opacity: 0;
-		transform: translateY(-10px);
-		pointer-events: none;
-
-		transition: opacity 0.18s ease, transform 0.18s ease;
-	}
+		.mobileMenu {
+			display: block;
+			position: fixed;
+			top: 6.6rem;
+			right: 1rem;
+			left: auto;
+			max-width: 260px;
+			margin-right: 0.75rem;
+			padding: 1.2rem 1.1rem 1.4rem;
+			border-radius: 20px;
+			background: rgba(5, 5, 5, 0.96);
+			border: 1px solid rgba(255, 255, 255, 0.3);
+			box-shadow: 0 20px 50px rgba(0, 0, 0, 0.95);
+			opacity: 0;
+			transform: translateY(-10px);
+			pointer-events: none;
+			transition: opacity 0.18s ease, transform 0.18s ease;
+		}
 
 	.mobileMenuOpen {
 		opacity: 1;
